fixed grid on mobile

--- a/styles.css
+++ b/styles.css
@@ -83,8 +83,8 @@ nav ul li a:hover {
 }
 
 #portfolio {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 40px;
